syntax = "proto3";

option go_package = "./";

package kvstore;

service KeyValueStore {
  // 存储键值对
  rpc Put (PutRequest) returns (PutResponse) {}
  
  // 获取键值
  rpc Get (GetRequest) returns (GetResponse) {}
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  string value = 1;
  bool found = 2;
}